durga@48demo.com.bleadtest/src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>AS_HostingAddr2__c</fullName>
        <label>HostingAddr2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_HostingCity__c</fullName>
        <label>HostingCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_Pay_at_the_Door_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Pay at the Door Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Pay_by_Check_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Pay by Check Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accept_Send_an_Invoice_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accept Send an Invoice Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendee_Tags__c</fullName>
        <label>Attendee_Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_ContactURL__c</fullName>
        <description>Contact URL  gathers the contact information placing in the attendee registration, some thing like 
http://www.deloitte.com/view/en_IN/in/contact-us/index.htm</description>
        <inlineHelpText>Contact URL  gathers the contact information placing in the attendee registration
http://www.deloitte.com/view/en_IN/in/contact-us/index.htm</inlineHelpText>
        <label>Contact URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_CustomReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CustomReg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>EV_EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_EndTime__c</fullName>
        <label>EndTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_EventLogo__c</fullName>
        <label>EventLogo</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_HistingAddr1__c</fullName>
        <label>HistingAddr1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostedByEventBrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HostedByEventBrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_HostingCountryNew__c</fullName>
        <label>HostingCountryNew</label>
        <picklist>
            <picklistValues>
                <fullName>United States Of America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingCountry__c</fullName>
        <label>HostingCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingFax__c</fullName>
        <label>HostingFax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EV_HostingLocation__c</fullName>
        <label>HostingLocation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EV_HostingOrgName__c</fullName>
        <label>HostingOrgName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingPhone__c</fullName>
        <label>HostingPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>EV_HostingPostalCode__c</fullName>
        <label>HostingPostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingStateNew__c</fullName>
        <label>HostingStateNew</label>
        <picklist>
            <controllingField>EV_HostingCountryNew__c</controllingField>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingState__c</fullName>
        <label>HostingState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_HostingTimeZone__c</fullName>
        <label>HostingTimeZone</label>
        <picklist>
            <picklistValues>
                <fullName>Eastern Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mountain Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pacific Time(USA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Standard Time(IST)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EV_HostingZipcode__c</fullName>
        <label>HostingZipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_IncludedFields__c</fullName>
        <defaultValue>&apos;AS_FirstName__c,AS_Company__c,AS_Prefix__c,AS_Suffix__c,AS_Title__c,AS_CellPhone__c,AS_Age__c,AS_Gender__c,AS_BirthDate__c,AS_HomeAddress1__c,AS_ShippingAddress1__c,AS_WorkAddress1__c,AS_NAICSCode1__c,AS_NAICSCode2__c,AS_NAICSCode3__c,AS_NAICSCode4__c,AS_NAICSCode5__c,AS_PrimaryBusinessCategory__c,AS_SecondaryBusinessCategory__c,AS_NumberOfEmployees__c,AS_BusinessEstablishedDate__c,AS_BusinessRevenue__c,AS_BusinessTaxId__c,AS_BusinessDunsNumber__c,AS_WebsiteUrl__c,AS_BlogUrl__c,AS_DiversityType__c,AS_BusinessDescription__c,AttendeePic&apos;</defaultValue>
        <label>IncludedFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EV_Publish__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_QuickReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>QuickReg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EV_RedirectURI__c</fullName>
        <description>This is for  redirecting Attendee after finishing registration process(Both Details and payment ), and  Event admin need to  decide the location where to navigate the user</description>
        <inlineHelpText>This is for  redirecting Attendee after finishing registration process(Both Details and payment ), and  Event admin need to  decide the location where to navigate the user</inlineHelpText>
        <label>Redirect URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_SiteLocation__c</fullName>
        <description>the site location is the URL, indicates the event  registration available to the attendees, this should be something like https://http://boothleads.bleadtest.cs5.force.com/BioDiversity</description>
        <inlineHelpText>the site location is the URL, indicates the event  registration available to the attendees, this should be something like https://http://boothleads.bleadtest.cs5.force.com/BioDiversity</inlineHelpText>
        <label>SiteLocation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EV_StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EV_Title__c</fullName>
        <description>Changed By Phani on 09/07/2012</description>
        <label>Title</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EV_WebsiteURL__c</fullName>
        <label>WebsiteURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ev_RequiredFields__c</fullName>
        <defaultValue>&apos;AS_FirstName__c,AS_Company__c,AS_CellPhone__c&apos;</defaultValue>
        <label>RequiredFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventDiversityValues__c</fullName>
        <defaultValue>&quot;MINORITY OWNED BUSINESS ENTERPRISE;WOMAN OWNED BUSINESS ENTERPRISE;SBA 8(A) PROGRAM;SMALL DISADVANTAGED BUSINESS;HISTORICALLY UNDERUTILIZED BUSINESS ;SERVICE DISABLED VETERAN OWNED BUSINESS ENTERPRISE ;VETERAN OWNED BUSINESS ENTERPRISE ;SMALL BUSINESS ENTERPRISE ;DISADVANTAGED BUSINESS ENTERPRISE ;GAY, LESBIAN, BISEXUAL, TRANSGENDER&quot;</defaultValue>
        <label>EventDiversityValues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_PostalCode__c</fullName>
        <label>Event PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Printer__c</fullName>
        <defaultValue>&apos;Avery 5392 Name badges&apos;</defaultValue>
        <label>Event Printer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_ZipCode__c</fullName>
        <label>Event_ZipCode</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable First Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable First Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line_Size__c</fullName>
        <defaultValue>&apos;32pt&apos;</defaultValue>
        <label>Lable First Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_First_Line__c</fullName>
        <defaultValue>&apos;AS_FirstName__c&apos;</defaultValue>
        <label>Lable First Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable Secoend Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable Secoend Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line_Size__c</fullName>
        <defaultValue>&apos;24pt&apos;</defaultValue>
        <label>Lable Secoend Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Secoend_Line__c</fullName>
        <defaultValue>&apos;AS_LastName__c&apos;</defaultValue>
        <label>Lable Secoend Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Color__c</fullName>
        <defaultValue>&apos;Black&apos;</defaultValue>
        <label>Lable Third Line Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Font__c</fullName>
        <defaultValue>&apos;Times New Roman&apos;</defaultValue>
        <label>Lable Third Line Font</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line_Size__c</fullName>
        <defaultValue>&apos;18pt&apos;</defaultValue>
        <label>Lable Third Line Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lable_Third_Line__c</fullName>
        <defaultValue>&apos;AS_Company__c&apos;</defaultValue>
        <label>Lable Third Line</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Paypal_Email__c</fullName>
        <inlineHelpText>This is for storing the paypal email address for getting payments</inlineHelpText>
        <label>Paypal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Paypal_Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paypal_Username__c</fullName>
        <label>Paypal Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>PrimaryCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondaryCategory__c</fullName>
        <label>SecondaryCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airlines/Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Dispute Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apparel &amp; Fashion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architecture &amp; Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts and Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviation &amp; Aerospace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biotechnology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Supplies and Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civic &amp; Social Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civil Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer &amp; Network Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Games</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cosmetics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:15 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:45 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:15 AM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Event in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Registration Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Through_Paypal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Through Paypal</label>
        <type>Checkbox</type>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EV_Title__c</columns>
        <columns>EV_SiteLocation__c</columns>
        <columns>Status__c</columns>
        <columns>EV_StartDate__c</columns>
        <columns>StartTime__c</columns>
        <columns>EV_EndDate__c</columns>
        <columns>EV_EndTime__c</columns>
        <columns>EV_Description__c</columns>
        <columns>EV_EventLogo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QR_EVT_{dd}{yy}_{0000000}</displayFormat>
        <label>EV_id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>